# vector-search

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
FrontEnd/: index.html  package-lock.json  package.json
FrontEnd/src/: App.tsx  main.tsx
FrontEnd/src/Components/Search/: Search.tsx
FrontEnd/src/Components/UploadFiles/: UploadFiles.tsx
FrontEnd/src/layouts/Header/: Header.styles.ts  Header.tsx
FrontEnd/src/layouts/Main/: Main.tsx
VectorSearchService/: Dockerfile  pyproject.toml
VectorSearchService/app/: main.py
app/: main.py
